Updated all projects

--- a/projects/quayside/index.mdx
+++ b/projects/quayside/index.mdx
@@ -8,4 +8,8 @@ thumb: "./thumb.jpg"
 ---
 I was part of the Sidewalk Labs team that oversaw the development of the Quayside, a 12-acre, ~3 million SF urban development project in Toronto that demonstrated some of the most cutting-edge ideas in sustainable city-building.
 
-My specific responsibility included overseeing the design of the project’s horizontal elements, including Parliament Plaza, Queens Quay, and the amphibious public spaces around Parliament Slip; and overseeing technology integration within these elements (which became part of the larger Quayside Digital Innovation Appendix).
+As Associate Director of Public Realm and Urban Design, I led the project’s horizontal elements, including Parliament Plaza, Queens Quay, and the amphibious public spaces around Parliament Slip; and overseeing the integration of technology within these elements, including mobility management, public realm sensing, heated pavements, and various other innovations.
+
+![public realm](public-realm.png "I oversaw a team of leading landscape architects and designers to create design visions for the entire ground plane of the project.")
+
+![exhibit setup](qq-detail.jpg "Detailed design and technology scenarios for Queens Quay, the main thoroughfare of Quayside")
