--- a/projects/streets-of-the-future/index.mdx
+++ b/projects/streets-of-the-future/index.mdx
@@ -7,23 +7,23 @@ category: "project"
 tags: ["Urban technology", "Technology prototyping", "Product development", "Mobility", "Public realm"]
 thumb: "./thumb.gif"
 ---
-I led a ~$1 million R&D program at Sidewalk Labs, focused on envisioning “urban streets of the future” as both a space for the dynamic social life of the city and a platform for evolving technologies of mobility, logistics, energy, and sensing. The program involved many domain experts, technology partners, and consultants, and my role spanned vision and strategy, program management and execution, design, and digital prototyping.
+I led a ~$1 million R&D program at Sidewalk Labs, focused on envisioning “urban streets of the future” as both a space for the dynamic social life of the city and a platform for evolving technologies of mobility, logistics, energy, and sensing. The program brought together many domain experts and technology partners. My role spanned vision and strategy, program management and execution, design, and digital prototyping.
 
 
 <h4>Designing Purposeful, Human-centered Use Cases</h4>
 
-The program begins with researching real-world needs, desired human-centered outcomes, and new technology affordances, and builds purposeful use cases around these outcomes. With [Colas](https://www.colas.com/en/media/press-releases/signature-agreement-sidewalk-labs) (one of the world's largest infrastructure builders, and a key program partner) and Arup, I undertook a strategic design process that resulted in use cases built around flexible curb space management, pedestrian safety, and vehicle charging.
+The program began with researching real-world needs, desired human-centered outcomes, and new technology affordances, and built purposeful use cases around these outcomes. With [Colas](https://www.colas.com/en/media/press-releases/signature-agreement-sidewalk-labs) (one of the world's largest infrastructure builders, and a key program partner) and Arup, I undertook a strategic design process that resulted in use cases built around flexible curb space management, pedestrian safety, and vehicle charging.
 
-![Flex curb concept](./skop-1.jpg "Street Kit of Parts: manual of technology concepts")
+![](./needs_affordances_use_cases-03.png)
 
-![Flex curb concept](./skop-2.jpg "User journey (left) and kit of parts breakdown")
+![Skop page](./skop-pages.jpg "I ran a series of user-centered design sprints, resulting in a number of technology use cases and concepts.")
 
 
 <h4>Concept Design for the Flex Curb</h4>
 
 One of the use cases resulted in the Flex Curb, a technology concept to enable dynamic curb space use by allowing the street surface itself to communicate, using new sensing and LED pavement technologies.
 
-![Flex curb concept](./overview-03.jpg "The Flex Curb relies on LED pavement to communicate dynamic rules of the curb for a variety of use cases")
+![Flex curb concept](./overview-03.jpg "The Flex Curb relies on LED pavement and in-pavement sensing to communicate dynamic rules of the curb for a variety of use cases.")
 
 <h4>Designing for Digital-Physical Systems</h4>
 
@@ -34,6 +34,8 @@ Designing hybrid digital-physical systems for the urban environment entail uniqu
 <h4>Digital-physical Prototyping</h4>
 
 We secured a site at Brooklyn Navy Yard to bring the Flex Curb concept to life. The prototype involved a real-world installation of Colas’s Flowell LED pavement, as well as a set of APIs and software apps for visualization and control, which I prototyped.
+
+![Prototype](./prototype.png "Digital physical prototype at the Brooklyn Navy Yard")
 
 ![Numina](./thumb.png "Using data feeds from a Numina sensor, I prototyped an app for Flex Curb operators to monitor dynamic patterns of pedestrian and vehicle movement")
 
