--- a/projects/the-road-ahead/index.mdx
+++ b/projects/the-road-ahead/index.mdx
@@ -7,3 +7,5 @@ tags: ["Technology prototyping", "Data visualization"]
 thumb: "./thumb.jpg"
 ---
 I worked with a team at [MIT Civic Data Design Lab](https://civicdatadesignlab.mit.edu/NextStop) to create an analog and digital experience as part of [“The Road Ahead: Reimagining Mobility”](https://collection.cooperhewitt.org/exhibitions/2318794479/) exhibit at Cooper Hewitt. I designed and built the digital centerpiece of the exhibit, visualizing the semantic content of the hundreds of visitor-submitted responses on their desired future urban mobility experience.
+
+![exhibit setup](road-ahead-2.jpeg "Visitors are asked to come up with their desired future urban mobility experience. Their feedback is then semantically parsed, thematically grouped, and visualized in the digital centerpiece.")
